Building up registration